--- a/My_Music_App/.gitignore
+++ b/My_Music_App/.gitignore
@@ -40,3 +40,7 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# environment folder
+/src/environments/environment.prod.ts
+/src/environments/environment.ts
